# MAB

./: .gitignore  README.md  Task.md  pyproject.toml
docs/: MAB.md  SlotMachine.md
src/: bandit_test.py  main.py
src/bandits/: bandit.py  bandit_metrics.py  strategies.py
src/bandits/helpers/: plotter.py
src/domain/: arm.py
src/examples/: slot_machine.py
src/helpers/domain/metrics/: arm_metric.py
src/mab/case_study/: bernoulli_arm.py  slot_machines.py
src/mab/domain/: arm.py  bandit.py  solver.py
src/mab/domain/algorithms/: algorithms.py  strategies.py
src/mab/helpers/: plotter.py
src/mab/simulator/: benchmark_report.py  plotter.py  simulation.py  simulation_report.py  simulation_results.py  simulator.py
src/mab/solvers/: __init__.py  epsilon_greedy.py  solvers.py  thomson_sampling.py  ucb.py
src/tests/domain/: arm_test.py  bandit_test.py  solver_test.py
