[tool.poetry]
name = "mab"
version = "0.1.0"
description = "Toy examples to learn and play with the multi-armed-bandit problem."
authors = ["JordiMateoUdL <jordi.mateo@udl.cat>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.24.3"
matplotlib = "^3.7.1"
scipy = "^1.10.1"
pylint = "^2.17.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
